<resources>
    <string name="app_name">Disaster-Alarm</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="register">REGISTER</string>
    <string name="login_email_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="login_background">login background</string>
    <string name="disaster_alarm">Disaster Alarm</string>
    <string name="disaster_img_desc">disaster image</string>

    <string name="village">Village:\u0020</string>
    <string name="date">Date:\u0020</string>
    <string name="type">Disaster Type:\u0020</string>
    <string name="desc">Description:\u0020</string>
    <string name="disasters">Disasters</string>
    <string name="report">Report</string>
    <string name="account">Account</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="id">Id:\u0020\u0020</string>
    <string name="username">Username:\u0020\u0020</string>
    <string name="email">Email:\u0020\u0020</string>

    <string-array name="disaster_types">
        <item>Natural</item>
        <item>Man-Made</item>
    </string-array>

</resources>
