<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="login"
            type="com.kalu.disaster_alarm.LoginFragment" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginFragment">

        <ScrollView
            style="@style/parent"
            android:layout_height="match_parent">

        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                style="@style/loginCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:layout_marginBottom="@dimen/loginViewsMargin"
                android:background="@color/whiteCardColor"
                android:elevation="5dp"
                app:cardCornerRadius="@dimen/loginCardRadius"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout">


                <LinearLayout
                    style="@style/linearParent"
                    android:layout_gravity="center"
                    android:padding="@dimen/loginViewsMargin">

                    <TextView
                        style="@style/headerTextPrimary"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:text="@string/login" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputEmail"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editTextEmail"
                            style="@style/modifiedEditText"
                            android:hint="@string/login_email_hint"
                            android:inputType="textEmailAddress"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputPassword"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editTextPassword"
                            style="@style/modifiedEditText"
                            android:hint="@string/login_password_hint"
                            android:inputType="textPassword"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <ProgressBar
                        android:id="@+id/pbLoggingIn"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="invisible" />

                    <TextView
                        style="@style/viewParent"
                        android:layout_gravity="end"
                        android:layout_marginTop="10dp"
                        android:text="@string/forgot_password"
                        android:textColor="@color/teal_700"
                        android:textSize="@dimen/newsMoreTextSize" />

                    <Button
                        android:id="@+id/cirLoginButton"
                        style="@style/loginButton"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:text="Login" />


                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="83dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/klogo" />

            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:id="@+id/relativeLayout"
                style="@style/parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:weightSum="12">

                    <LinearLayout
                        style="@style/parent"
                        android:layout_weight="3"
                        android:background="@drawable/login_shape_bk"
                        android:orientation="vertical">

                        <ImageView
                            style="@style/parent"
                            android:background="@drawable/ic_login_bk"
                            android:contentDescription="@string/login_background" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="30dp"
                    android:orientation="vertical">


                    <TextView
                        style="@style/headerText"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:text="@string/disaster_alarm" />

                </LinearLayout>
            </RelativeLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>
</layout>
