<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.kalu.ui.screens.account.AccountsViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.account.AccountsFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/profile_toolbar"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/ic_login_bk"
            android:backgroundTint="@color/teal_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="196dp"
            android:layout_height="196dp"
            android:layout_marginTop="76dp"
            android:src="@drawable/luka"
            app:civ_border_color="@color/red_accent"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/profile_toolbar" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="48dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="30dp">

                <TextView
                    android:id="@+id/txt_label_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/id"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_user_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@{String.valueOf(viewmodel.userProfile.id)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/txt_label_id"
                    app:layout_constraintTop_toTopOf="@+id/txt_label_id" />

                <TextView
                    android:id="@+id/txt_label_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/username"
                    app:layout_constraintStart_toStartOf="@+id/txt_label_id"
                    app:layout_constraintTop_toBottomOf="@+id/txt_label_id" />

                <TextView
                    android:id="@+id/txt_username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{viewmodel.userProfile.username}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/txt_label_username"
                    app:layout_constraintTop_toTopOf="@+id/txt_label_username" />

                <TextView
                    android:id="@+id/txt_label_email_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/email"
                    app:layout_constraintStart_toStartOf="@+id/txt_label_username"
                    app:layout_constraintTop_toBottomOf="@+id/txt_label_username" />

                <TextView
                    android:id="@+id/txt_user_email_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{viewmodel.userProfile.email_address}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/txt_label_email_address"
                    app:layout_constraintTop_toTopOf="@+id/txt_label_email_address" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
